bau: Some refactoring